ISSUE:  fix spacing/margin on header login/logout

--- a/shared/css/header_footer_styles.css
+++ b/shared/css/header_footer_styles.css
@@ -97,10 +97,13 @@ nav .navbar-nav li a.nav-link {
 	background-color: #dddddd;
 	color: #000;
 }
+.navbar-toggler {
+	line-height: .9em;
+}
 .navbar-toggler-icon {
     display: inline-block;
     width: 1em;
-    height: .9em;
+    height: .87em;
     vertical-align: middle;
     content: "";
     background: no-repeat center center;
